--- a/README.rdoc
+++ b/README.rdoc
@@ -3,6 +3,9 @@ TBD
 Taken from 
 http://natashatherobot.com/devise-sign-up-ajax-rails/
 
+== Heroku pull and push database from heroku and to heroku from a localmachine
+https://github.com/ddollar/heroku-pg-transfer
+
 == Welcome to Rails
 
 Rails is a web-application framework that includes everything needed to create
