Fixed the email that is sent with a 30 mins delay once a user signs up. Changed the mandrill login from a heroku add on to a stand alone mandrill account. To send out scheduled emails, the account has to have a positive balance. I have no idea how to do that with the heroku addon

--- a/README.rdoc
+++ b/README.rdoc
@@ -6,6 +6,9 @@ http://natashatherobot.com/devise-sign-up-ajax-rails/
 == Admin history sort
 http://stackoverflow.com/questions/5739158/rails-ruby-how-to-sort-an-array
 
+== Setting up and using Mandrill SMTP headers
+http://stackoverflow.com/questions/16172562/rails-delayed-job-argument-error-with-mailer
+
 == Running in production mode
 rake db:migrate RAILS_ENV="production" 
 rails s -e production
