--- a/README.rdoc
+++ b/README.rdoc
@@ -17,6 +17,8 @@ RAILS_ENV=production rails console
 == Heroku pull and push database from heroku and to heroku from a localmachine
 https://github.com/ddollar/heroku-pg-transfer
 
+== Getting records by month, week etc
+https://github.com/radar/by_star 
 
 == Welcome to Rails
 
