Trying to fix the issue where logging in with angularjs is failing. The response is always the entire html for the page

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,6 @@
+== Angularjs resource example
+http://blog.brunoscopelliti.com/building-a-restful-web-service-with-angularjs-and-php-more-power-with-resource
+
 == Devise AJAX
 TBD
 Taken from 
